[package]
name = "hydra-pin"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["http2", "blocking", "rustls-tls"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
